# aethalloc

./: BENCHMARK.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: benchmarks.yml  ci.yml
aethalloc-abi/: Cargo.toml
aethalloc-abi/src/: global.rs  lib.rs
aethalloc-amo/: Cargo.toml
aethalloc-amo/benches/: ring_buffer_bench.rs
aethalloc-amo/src/: command.rs  lib.rs  ring_buffer.rs  support_core.rs
aethalloc-amo/tests/: ring_buffer_test.rs  support_core_test.rs
aethalloc-core/: Cargo.toml
aethalloc-core/src/: buddy.rs  global_pool.rs  hess.rs  lib.rs  magazine.rs  page.rs  size_class.rs  slab.rs  thread_local.rs  vmpc.rs
aethalloc-core/tests/: global_pool_test.rs  size_class_test.rs  stress_test.rs
aethalloc-hess/: Cargo.toml
aethalloc-hess/src/: cheri.rs  lib.rs  mte.rs  tag_manager.rs  x86.rs
aethalloc-metrics/: Cargo.toml
aethalloc-metrics/src/: lib.rs  main.rs
aethalloc-vmpc/: Cargo.toml
aethalloc-vmpc/src/: compactor.rs  lib.rs  page_table.rs
benches/: Makefile  asymmetric_threads.c  corruption_test.c  fragmentation.c  fragmentation_churn.c  kv_store.c  massive_alloc.c  micro_burst.c  mixed_workload.c  multithread_churn.c  null_return.c  oom_survival.c  packet_churn.c  producer_consumer.c  realloc_churn.c  realloc_large.c  rss_reclaim.c  simple_test.c  tail_latency.c
benches/scripts/: run_benchmarks.sh
tests/integration/: preload_test  preload_test.c  run_test.sh
