[package]
name = "aethalloc-abi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["simple-cache"]
magazine-caching = ["aethalloc-core/magazine"]
simple-cache = []
metrics = []

[dependencies]
aethalloc-core = { path = "../aethalloc-core" }
libc = { version = "0.2", default-features = false }
