[package]
name = "aethalloc-abi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["magazine-caching"]
magazine-caching = ["aethalloc-core/magazine"]
simple-cache = []
metrics = []
fast-size-class = []

[dependencies]
aethalloc-core = { path = "../aethalloc-core" }
libc = { version = "0.2", default-features = false }
