[package]
name = "aethalloc-abi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["magazine-caching"]
magazine-caching = ["aethalloc-core/magazine"]
simple-cache = []
metrics = []
vmpc = ["aethalloc-core/vmpc", "aethalloc-amo/vmpc", "dep:aethalloc-vmpc"]

[dependencies]
aethalloc-core = { path = "../aethalloc-core", features = ["hess"] }
aethalloc-amo = { path = "../aethalloc-amo", features = ["std", "hess"] }
aethalloc-hess = { path = "../aethalloc-hess" }
aethalloc-vmpc = { path = "../aethalloc-vmpc", features = ["std"], optional = true }
libc = { version = "0.2", default-features = false }
