[package]
name = "aethalloc-amo"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
std = ["dep:libc"]
hess = ["dep:aethalloc-hess"]
vmpc = ["dep:aethalloc-vmpc"]

[dependencies]
aethalloc-hess = { path = "../aethalloc-hess", optional = true }
aethalloc-vmpc = { path = "../aethalloc-vmpc", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ring_buffer_bench"
harness = false
