[package]
name = "aethalloc-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = ["size-class", "page", "slab", "buddy", "thread-local"]
size-class = []
page = []
slab = []
buddy = []
thread-local = []
aethalloc-audit = []
magazine = []
hess = ["dep:aethalloc-hess"]
mte = ["hess", "aethalloc-hess/aethalloc-mte"]
cheri = ["hess", "aethalloc-hess/aethalloc-cheri"]
vmpc = ["dep:aethalloc-vmpc"]

[dependencies]
libc = { version = "0.2", default-features = false }
aethalloc-hess = { path = "../aethalloc-hess", optional = true }
aethalloc-vmpc = { path = "../aethalloc-vmpc", optional = true }
